--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.css
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.css
@@ -32,3 +32,14 @@ th {
     margin-left: 10px;
     font-size: 15px;
 }
+
+.imgdiv {
+    position: relative;
+}
+
+.imgdiv img {
+    position: absolute;
+    top: 10px;
+    left: 32vw;
+    border: 3px solid black;
+}
