--- a/GraphicEditor/View/SearchResultsForMedicines.xaml
+++ b/GraphicEditor/View/SearchResultsForMedicines.xaml
@@ -8,16 +8,16 @@
       d:DesignHeight="652" d:DesignWidth="766"
       Title="SearchResultsForMedicines">
 
-    <DockPanel>
-        <Button DockPanel.Dock="Bottom" Name="btnShowOnMap" Width="300" Margin="0,5,0,5" Content="Shown on map" FontWeight="Bold" FontSize="18" Click="buttonShowOnMap"/>
-        <DataGrid DockPanel.Dock="Top" Name="dataGridMedicate" AutoGenerateColumns="False" IsReadOnly="True">
+    <Grid>
+        <Button Name="btnShowOnMap" Margin="246,588,246,24"  Width="275" Content="Shown on map" FontWeight="Bold" FontSize="22" Click="buttonShowOnMap"/>
+        <DataGrid Name="dataGridMedicate" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" Width="710" Height="550" IsReadOnly="True" Margin="0,25,0,0">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" Width="149"  Binding="{Binding Id}"/>
-                <DataGridTextColumn Header="Name" Width="149"  Binding="{Binding Med}"/>
-                <DataGridTextColumn Header="Dosage" Width="149"  Binding="{Binding Dosage}" />
-                 <DataGridTextColumn Header="Quantity" Width="149" Binding="{Binding Quantity}"/>
-                <DataGridTextColumn Header="Storage room" Width="149"  Binding="{Binding Room.RoomLabel}"/>
+                <DataGridTextColumn Header="Id" Width="140"  Binding="{Binding Id}"/>
+                <DataGridTextColumn Header="Name" Width="140"  Binding="{Binding Med}"/>
+                <DataGridTextColumn Header="Dosage" Width="140"  Binding="{Binding Dosage}" />
+                <DataGridTextColumn Header="Quantity" Width="140" Binding="{Binding Quantity}"/>
+                <DataGridTextColumn Header="Storage room" Width="140"  Binding="{Binding Room.RoomLabel}"/>
             </DataGrid.Columns>
         </DataGrid>
-    </DockPanel>
+    </Grid>
 </Page>
