--- a/GraphicEditor/View/MainPage.xaml
+++ b/GraphicEditor/View/MainPage.xaml
@@ -39,14 +39,14 @@
                 <TabItem x:Name="MAP" Header="Map">
                     <Grid Background="#FFE5E5E5">
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35"/>
-                        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
-                            <ComboBoxItem Content="General H1"/>
+                        <ComboBox Name="comboBoxWardsMap" SelectionChanged="ComboBoxWardsMap_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
+                            <ComboBoxItem Content="General"/>
                             <ComboBoxItem Content="Cardiology"/>
                             <ComboBoxItem Content="Oncology"/>
                             <ComboBoxItem Content="Radiology"/>
                             <ComboBoxItem Content="Neurology"/>
                             <ComboBoxItem Content="Intesive care"/>
-                            <ComboBoxItem Content="General H2"/>
+                            <ComboBoxItem Content="Emergency"/>
                             <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Gastroenterology"/>
                             <ComboBoxItem Content="Hematology"/>
@@ -76,7 +76,7 @@
                             <ComboBoxItem>Second floor</ComboBoxItem>
                         </ComboBox>
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35" Grid.Column="2"/>
-                        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0" Grid.Column="2">
+                        <ComboBox Name="comboBoxWardsHospital1" SelectionChanged="ComboBoxWardsHospital1_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0" Grid.Column="2">
                             <ComboBoxItem Content="General"/>
                             <ComboBoxItem Content="Cardiology"/>
                             <ComboBoxItem Content="Oncology"/>
@@ -95,7 +95,7 @@
                             <ComboBoxItem>Second floor</ComboBoxItem>
                         </ComboBox>
                         <Label Content="Wards:" HorizontalAlignment="Left" Margin="132,-7,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="SemiBold" Width="110" Height="35"/>
-                        <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
+                        <ComboBox Name="comboBoxWardsHospital2" SelectionChanged="ComboBoxWardsHospital2_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Margin="132,28,0,0">
                             <ComboBoxItem Content="General"/>
                             <ComboBoxItem Content="Dialysis"/>
                             <ComboBoxItem Content="Gastroenterology"/>
