--- a/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
+++ b/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
@@ -55,9 +55,45 @@
                     </div> 
                 </div>
               </mat-radio-group>
-              <button mat-raised-button color="primary" style="margin-top: 30px;">Primary</button>
+              <button mat-raised-button color="primary" style="margin-top: 30px;" (click)="submit()">Primary</button>
         </mat-step>
         
-    </mat-horizontal-stepper>
+    </mat-horizontal-stepper>      
+</div>
 
+<div class="container" id="tableContainer">
+    <table mat-table [dataSource]="availableAppointments" class="mat-elevation-z8">
+
+        <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition" -->
+    
+        <!-- Position Column -->
+        <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="Date">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.start | date: 'dd/MM/yyyy'}} </td>
+        </ng-container>
+    
+        <!-- Weight Column -->
+        <ng-container matColumnDef="Time">
+        <th mat-header-cell *matHeaderCellDef> Time </th>
+        <td mat-cell *matCellDef="let element"> {{element.start | date : 'shortTime'}} - {{element.end | date : 'shortTime'}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="#">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-raised-button id="button" (click)="schedule(element)">Schedule</button>
+            </td>
+            </ng-container>
+    
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 </div>
