--- a/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
+++ b/WebApplicationFrontend/src/app/appointment/recommendation/recommendation.component.html
@@ -55,7 +55,7 @@
                     </div> 
                 </div>
               </mat-radio-group>
-              <button mat-raised-button color="primary" style="margin-top: 30px;" (click)="submit()">Primary</button>
+              <button mat-raised-button color="primary" style="margin-top: 30px;" (click)="submit()">Submit</button>
         </mat-step>
         
     </mat-horizontal-stepper>      
@@ -63,23 +63,16 @@
 
 <div class="container" id="tableContainer">
     <table mat-table [dataSource]="availableAppointments" class="mat-elevation-z8">
-
-        <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-    
-        <!-- Position Column -->
         <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+        <td mat-cell *matCellDef="let element; index as i"> {{i+1}} </td>
         </ng-container>
     
-        <!-- Name Column -->
         <ng-container matColumnDef="Date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.start | date: 'dd/MM/yyyy'}} </td>
         </ng-container>
     
-        <!-- Weight Column -->
         <ng-container matColumnDef="Time">
         <th mat-header-cell *matHeaderCellDef> Time </th>
         <td mat-cell *matCellDef="let element"> {{element.start | date : 'shortTime'}} - {{element.end | date : 'shortTime'}}</td>
@@ -88,7 +81,7 @@
         <ng-container matColumnDef="#">
             <th mat-header-cell *matHeaderCellDef> # </th>
             <td mat-cell *matCellDef="let element"> 
-                <button mat-raised-button id="button" (click)="schedule(element)">Schedule</button>
+                <button mat-raised-button color="primary" id="button" (click)="schedule(element)">Schedule</button>
             </td>
             </ng-container>
     
