:sparkles: Finished implementing logic for blocking patients

--- a/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
+++ b/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
@@ -8,12 +8,12 @@
         <th> Username </th>
         <th> Name </th>
         <th> Surname </th>
-        <tr *ngFor="let blocked of dataSource;let i=index" [class.data-selected]="blocked.isSelected">
-            <td> {{blocked.id}} </td>
-            <td> {{blocked.username}} </td>
-            <td> {{blocked.name}} </td>
-            <td> {{blocked.surname}} </td>
-            <td> <button [disabled]="blocked.clicked" (click)="blocked.isSelected = true;blocked.clicked = true" mat-raised-button color="warn">Block</button> </td>
+        <tr *ngFor="let patient of dataSource;let i=index" [class.data-selected]="patient.isSelected">
+            <td> {{patient.id}} </td>
+            <td> {{patient.username}} </td>
+            <td> {{patient.name}} </td>
+            <td> {{patient.surname}} </td>
+            <td> <button [disabled]="patient.clicked" (click)="patient.isSelected = true;patient.clicked = true;updateStatus(patient.id,!patient.blocked, $event.target)" mat-raised-button color="warn">Block</button> </td>
         </tr>
        
     </table>
