--- a/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
+++ b/WebApplicationFrontend/src/app/appointment/observe-appointment/observe-appointment.component.html
@@ -1,5 +1,23 @@
 <div class = "container">
-    <div class="row" *ngFor="let appointment of surveyableAppointments">
+    <div class="row1" *ngFor="let appointment of allCancelableAppointments">
+        <mat-card class="card">
+            <mat-card-header>
+                <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>        
+                <p class="content-paragraph">Doctor : <strong>{{appointment.name}} {{appointment.surname}}</strong></p>    
+                <p class="content-paragraph">Date : <strong>{{appointment.start | date: 'dd/MM/yyyy'}}</strong></p>    
+                <p class="content-paragraph">Time : <strong>{{appointment.start | date: 'HH:mm'}} - {{appointment.end | date: 'HH:mm'}}</strong></p>
+                <p class="content-paragraph">Status : <strong>Finished</strong></p>
+                <p class="content-paragraph">Room : <strong>{{appointment.roomType}}-{{appointment.roomNumber}}</strong></p>
+            </mat-card-content>
+            <mat-card-actions>
+                    <button mat-raised-button class="button1" (click)="cancelAppointment(appointment.id, $event.target)">Cancel</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+
+    <div class="row2" *ngFor="let appointment of surveyableAppointments">
         <mat-card class="card">
             <mat-card-header>
                 <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
@@ -16,26 +34,8 @@
             </mat-card-actions>
         </mat-card>
     </div>
-    
-    <!--
-    <mat-card class="card">
-        <mat-card-header>
-            <mat-card-title>Surgery</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>        
-            <p class="content-paragraph">Doctor : <strong>Pera Peric</strong></p>    
-            <p class="content-paragraph">Date : <strong>10.12.2020.</strong></p>    
-            <p class="content-paragraph">Time : <strong>9:15 - 12:00</strong></p>
-            <p class="content-paragraph">Status : <strong>Incoming</strong></p>
-            <p class="content-paragraph">Room : <strong>Operation Room - 2</strong></p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-raised-button class="button1" >Survey</button>
-            <button mat-raised-button class="button1" >Cancel</button>
-        </mat-card-actions>
-    </mat-card>
--->
-    <div class="row1" *ngFor="let appointment of allOtherAppointments">
+
+    <div class="row3" *ngFor="let appointment of allOtherAppointments">
         <mat-card class="card">
             <mat-card-header>
                 <mat-card-title>{{appointment.typeOfAppointment}}</mat-card-title>
