--- a/GraphicEditor/View/AdditionalInformationExaminationRoom.xaml
+++ b/GraphicEditor/View/AdditionalInformationExaminationRoom.xaml
@@ -9,7 +9,7 @@
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
             <Image Name="imageLogo" Width="60" Margin="5,0,0,0" />
-            <Label Content="Additiondal information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
+            <Label Content="Additional information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
         </StackPanel>
         <DockPanel DockPanel.Dock="Bottom">
             <Button DockPanel.Dock="Left" x:Name="buttonSave" Content="Save" HorizontalAlignment="Left" Height="30" Margin="5,5,5,5" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" Click="Save_Click" FontSize="20"/>
@@ -25,11 +25,13 @@
             <TextBox HorizontalAlignment="Left" Height="24" Margin="252,113,0,0" TextWrapping="Wrap" Text="{Binding Department.Name}" VerticalAlignment="Top" Width="150"/>
             <TextBox Name="textBoxDoctor" HorizontalAlignment="Left" Height="24" Margin="252,145,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="150"/>
 
-            <DataGrid AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" Width="370" Height="175" Margin="70,179,54,0" RenderTransformOrigin="1.059,-0.838">
+            <DataGrid Name="dataGridAppointments" AutoGenerateColumns="False" HorizontalAlignment="Center" VerticalAlignment="Top" Width="370" Height="175" Margin="70,179,54,0" RenderTransformOrigin="1.059,-0.838" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn  Header="Date" Width="125"/>
-                    <DataGridTextColumn Header="Time" Width="125"/>
-                    <DataGridTextColumn Header="Patient" Width="125"/>
+                    <DataGridTextColumn Header="ID" Width="74" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Doctor" Width="74" Binding="{Binding Doctor.Name}"/>
+                    <DataGridTextColumn Header="Start time" Width="74" Binding="{Binding Start}"/>
+                    <DataGridTextColumn Header="End time" Width="74" Binding="{Binding End}"/>
+                    <DataGridTextColumn Header="Finished" Width="74" Binding="{Binding Finished}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
