--- a/GraphicEditor/View/SearchAppointment.xaml
+++ b/GraphicEditor/View/SearchAppointment.xaml
@@ -48,7 +48,7 @@
                     <TextBox DockPanel.Dock="Bottom" Name="textBoxTo" Width="140"/>
                 </DockPanel>
             </StackPanel>
-            <Button DockPanel.Dock="Right" Name="buttonSearch" Margin="0,5,5,5" Content="Search for available appointments" Width="190" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="buttonSearchForAvailableAppointments"/>
+            <Button DockPanel.Dock="Right" Name="buttonSearch" Margin="0,5,5,5" Content="Search" Width="80" Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="buttonSearchForAvailableAppointments" FontWeight="Bold"/>
         </DockPanel>
         
         <DockPanel DockPanel.Dock="Bottom">
