--- a/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.html
+++ b/WebApplicationFrontend/src/app/appointment/scheduling/scheduling.component.html
@@ -52,8 +52,37 @@
         </mat-step>
         <mat-step>
             <ng-template matStepLabel>Select appointment</ng-template>
-
-
+            <button mat-raised-button color="primary" style="margin-top: 30px;" (click)="submit()">Submit</button>
         </mat-step>
     </mat-horizontal-stepper>
+</div>
+
+<div class="container" id="tableContainer">
+    <table mat-table [dataSource]="availableAppointments" class="mat-elevation-z8">
+        <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let element; index as i"> {{i+1}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="Date">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.start | date: 'dd/MM/yyyy'}} </td>
+        </ng-container>
+    
+        <ng-container matColumnDef="Time">
+        <th mat-header-cell *matHeaderCellDef> Time </th>
+        <td mat-cell *matCellDef="let element"> {{element.start | date : 'shortTime'}} - {{element.end | date : 'shortTime'}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="#">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-raised-button color="primary" id="button" (click)="schedule(element)">Schedule</button>
+            </td>
+            </ng-container>
+    
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 </div>
