--- a/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
+++ b/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
@@ -13,7 +13,7 @@
             <td> {{patient.username}} </td>
             <td> {{patient.name}} </td>
             <td> {{patient.surname}} </td>
-            <td> <button [disabled]="patient.clicked" (click)="patient.isSelected = true;patient.clicked = true;updateStatus(patient.id,!patient.blocked, $event.target)" mat-raised-button color="warn">Block</button> </td>
+            <td> <button [disabled]="patient.clicked" (click)="patient.isSelected = true;patient.clicked = true;updateStatus(patient.id, $event.target)" mat-raised-button color="warn">Block</button> </td>
         </tr>
        
     </table>
