--- a/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
+++ b/WebApplicationFrontend/src/app/block-malicious-users/block-malicious-users/block-malicious-users.component.html
@@ -8,12 +8,12 @@
         <th> Username </th>
         <th> Name </th>
         <th> Surname </th>
-        <tr *ngFor="let patient of dataSource;let i=index" [class.data-selected]="patient.isSelected">
+        <tr *ngFor="let patient of maliciousPatients;let i=index" [class.data-selected]="patient.isSelected">
             <td> {{patient.id}} </td>
             <td> {{patient.username}} </td>
             <td> {{patient.name}} </td>
             <td> {{patient.surname}} </td>
-            <td> <button [disabled]="patient.clicked" (click)="patient.isSelected = true;patient.clicked = true;updateStatus(patient.id, $event.target)" mat-raised-button color="warn">Block</button> </td>
+            <td> <button [disabled]="patient.clicked" (click)="patient.isSelected = true;patient.clicked = true;updateStatus(patient.id)" mat-raised-button color="warn">Block</button> </td>
         </tr>
        
     </table>
