:rotating_light: :white_check_mark: Added E2E test for posting feedback

--- a/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/all-feedback/all-feedback.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-    
-            
+    <h1 name="feedbacks">Feedbacks</h1>
+
+    <h2 name="all_feedback_len">Currently there are: {{allFeedback.length}} feedbacks.</h2>
+
                 <div class="row" *ngFor="let feedback of allFeedback">  
                     
                     <mat-card>
@@ -41,7 +43,7 @@
                
            
         
-    
+
     
 </div>
 
