--- a/WebApplicationFrontend/src/app/feedback/post-feedback/post-feedback.component.html
+++ b/WebApplicationFrontend/src/app/feedback/post-feedback/post-feedback.component.html
@@ -30,7 +30,7 @@
                 <input id="anonymousNo" type="radio" value="no" name="anonymous" formControlName="anonymous">
                 <label for="no">No</label>
             </div>
-        <button type="submit" class="btn btn-success btn-lg" [disabled]="postForm.invalid">Submit</button>
+        <button type="submit" class="btn btn-success btn-lg" value="submit" [disabled]="postForm.invalid">Submit</button>
         </div>
     </form>
    
